--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -522,12 +522,12 @@ function getUserCurrent() {
         if (data.user_info) {
             console.log('Информация о пользователе:', data.user_info);
         } else if (data.authorization_url) {
-            // Логируем URL для авторизации в консоли
-            console.log('Полученная ссылка для авторизации:', data.authorization_url);
+            // Показываем alert с ссылкой для авторизации
+            alert(`Для продолжения требуется авторизация. Пожалуйста, перейдите по ссылке: ${data.authorization_url}`);
             
             // Сохраняем текущий URL и перенаправляем на страницу авторизации
             sessionStorage.setItem('redirect_after_auth', window.location.href);  // Сохраняем ссылку
-            window.location.href = data.authorization_url;
+            window.location.href = data.authorization_url; // Перенаправляем на авторизацию
         } else {
             console.log('Ошибка получения данных:', data.error);
         }
@@ -536,6 +536,7 @@ function getUserCurrent() {
         console.error('Ошибка запроса:', error);
     });
 }
+
 
 
 // Вызов функции при загрузке страницы
