--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -519,7 +519,7 @@ function getUserCurrent() {
         .then(response => response.json())
         .then(data => {
             console.log(data)
-            if (data.user_info) {
+            if (data.user_name) {
                 alert('Имя пользователя: ' + data.user_name); // Выводим имя пользователя в alert
             } else {
                 console.log('Ошибка получения данных:', data.error);
