--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -512,30 +512,65 @@ function getCsrfToken() {
     return '';
 }
 
+// function getUserCurrent() {
+//         fetch('/api/user-current/', {
+//             method: 'GET',
+//             headers: {
+//                 'X-CSRFToken': getCsrfToken(),
+//             },
+//         })
+//         .then(response => response.json())
+//         .then(data => {
+//             console.log(data)
+//             if (data.user_name) {
+//                 alert('Имя пользователя: ' + data.user_name); // Выводим имя пользователя в alert
+//             } else {
+//                 console.log('Ошибка получения данных:', data.error);
+//             }
+//         })
+//         .catch(error => {
+//             console.error('Ошибка запроса:', error);
+//         });
+//     }
+
+//     document.getElementById('getUserNameButton').addEventListener('click', getUserCurrent);
+
+
 function getUserCurrent() {
-        fetch('/api/user-current/', {
-            method: 'GET',
-            headers: {
-                'X-CSRFToken': getCsrfToken(),
-            },
-        })
-        .then(response => response.json())
-        .then(data => {
-            console.log(data)
-            if (data.user_name) {
-                alert('Имя пользователя: ' + data.user_name); // Выводим имя пользователя в alert
+    fetch('/api/user-current/', {
+        method: 'GET',
+        headers: {
+            'X-CSRFToken': getCsrfToken(),
+        },
+    })
+    .then(response => response.json())
+    .then(data => {
+        console.log(data);
+        if (data.user_name) {
+            alert('Имя пользователя: ' + data.user_name); // Выводим имя пользователя в alert
+        } else if (data.error) {
+            console.error('Ошибка:', data.error);
+
+            // Если есть ссылка для авторизации, показываем её пользователю
+            if (data.authorization_url) {
+                const authMessage = `
+                    Ошибка авторизации: ${data.error}
+                    Перейдите по следующей ссылке для повторной авторизации:
+                    ${data.authorization_url}
+                `;
+                alert(authMessage);
             } else {
-                console.log('Ошибка получения данных:', data.error);
+                alert('Ошибка получения данных: ' + data.error);
             }
-        })
-        .catch(error => {
-            console.error('Ошибка запроса:', error);
-        });
-    }
+        }
+    })
+    .catch(error => {
+        console.error('Ошибка запроса:', error);
+        alert('Произошла ошибка запроса. Проверьте соединение с сервером.');
+    });
+}
 
-    document.getElementById('getUserNameButton').addEventListener('click', getUserCurrent);
-
-
+document.getElementById('getUserNameButton').addEventListener('click', getUserCurrent);
 
 // Вызов функции при загрузке страницы
 
