--- a/oko_project/bitrix_calc/templates/calculation_add.html
+++ b/oko_project/bitrix_calc/templates/calculation_add.html
@@ -740,7 +740,7 @@ function filterClients() {
 
     function getCompanies() {
         fetch('/api/get-companies/', {
-            method: 'GET',
+            method: 'POST',
             headers: {
                 'X-CSRFToken': getCsrfToken(),
             },
