--- a/oko_project/bitrix_calc/templates/calculation_list.html
+++ b/oko_project/bitrix_calc/templates/calculation_list.html
@@ -82,10 +82,10 @@
             function extractDealIdAndGenerateUrl() {
                 // Получаем текущий URL
                 const currentUrl = window.location.href;
-
+                console.log(currentUrl)
                 // Используем регулярное выражение для извлечения ID сделки
                 const match = currentUrl.match(/details\/(\d+)/);
-
+                console.log(match)
                 if (match) {
                     const dealId = match[1];
                     console.log('ID сделки:', dealId);
